# projectrobotcontrol

./: README.md
projectrobot/datacollection/: README.md  gaitgenIMPROVED2.py  invkin.py  invkin2.py  invkinematics.py  kinematicstest.py  masstest.py  masstest2.py
projectrobot/datacollection/stuart_urdf/: CMakeLists.txt  package.xml
projectrobot/datacollection/stuart_urdf/launch/: display.launch  display_mesh.launch  stuart_gazebo.launch
projectrobot/datacollection/stuart_urdf/meshes/: calflink.stl  chassis.stl  frontrightpitchmotor.stl  rearleftpitchmotor.stl  rearleftrollmotor.stl  rearrighthipmotor.stl  rearrightrollmotor.stl  thighlink.stl
projectrobot/datacollection/stuart_urdf/rviz/: urdf.rviz
projectrobot/datacollection/stuart_urdf/urdf/: stuart.srdf  stuart_fixed.urdf  stuart_fixed_mesh.urdf
projectrobot/simulation/: README.md  gaitgen.py  gaitgenv2.py  gaitgenv3.py  reset.py  reset2.py  reset3.py  stuart.sdf
projectrobot/simulation/configs/: stuart.yaml
projectrobot/simulation/configs/stuart/joint_id_map/: stuart_joint_map.yaml
projectrobot/simulation/configs/stuart/xbotcore/: stuart_config.yaml
projectrobot/simulation/robots/stuart/meshes/: foot.stl  frontleftpitchmotor.stl  frontleftrollmotor.stl  realsenseassembly.stl  rearlefthipmotor.stl  rearleftrollmotor2.stl  rearrightpitchmotor.stl  tailmotor.stl
projectrobot/simulation/robots/stuart/stuart_gazebo/database/: database.config
projectrobot/simulation/robots/stuart/urdf/: stuart.srdf  stuartALLCORRECT.urdf  stuartWORKING.urdf
(+5 files in other folders)
