<?xml version="1.0"?>
<package>
  <name>stuart_urdf</name>
  <version>1.0.0</version>
  <description>
  
     very cool robot description package

  </description>

  <maintainer email="ll14c4p@leeds.ac.uk">Christopher Peers</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/stuart_urdf</url>
  <author email="ll14c4p@leeds.ac.uk">Christopher Peers</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>


</package>
